Fixed button resizing on smaller screens

--- a/common/themes.css
+++ b/common/themes.css
@@ -47,6 +47,6 @@ html[theme="dark"] #themeSvg {
 @media only screen and (max-width: 600px) {
   #themeSvg {
     height: 1rem;
-    width: 2rem;
+    width: 1rem;
   }
 }
